updated build files because ytdl deprecated python 3.8